WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
287007
block-axis inline box borders break caret placement in vertical-rl text
https://bugs.webkit.org/show_bug.cgi?id=287007
Summary
block-axis inline box borders break caret placement in vertical-rl text
fantasai
Reported
2025-02-04 02:28:14 PST
Overview: Something about block-axis borders on inline boxes breaks caret placement in vertical-rl text. Steps to Reproduce: 1. Open testcase. 2. Click in the padding before/after the start/end of the line. 3. Notice super wacky behavior where the cursor ends up on the wrong line or the wrong isde of the box. Other notes: The bug is triggered by block-axis borders (and not inline-axis borders), and only occurs in vertical-rl/sideways-rl modes (-lr modes are fine).
Attachments
testcase
(379 bytes, text/html)
2025-02-04 02:30 PST
,
fantasai
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-04 02:28:26 PST
<
rdar://problem/144149255
>
fantasai
Comment 2
2025-02-04 02:30:15 PST
Created
attachment 474134
[details]
testcase
fantasai
Comment 3
2025-02-04 02:35:32 PST
Current suspicion is on contentStartInBlockDirection(), due to use of isBlockFlipped(), but it needs more investigation.
https://searchfox.org/wubkat/source/Source/WebCore/layout/integration/inline/InlineIteratorLineBoxInlines.h#39
fantasai
Comment 4
2025-03-06 12:10:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/42026
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug