Fix caret placement in vertical-rl text with inline borders https://bugs.webkit.org/show_bug.cgi?id=287007 rdar://144149255

Reviewed by NOBODY (OOPS!).

The check for isLineInverted() seems incorrect, and causes very wacky
caret placement in vertical-rl inline content.

* Source/WebCore/layout/integration/inline/InlineIteratorLineBoxModernPath.h:
(WebCore::InlineIterator::LineBoxIteratorModernPath::contentLogicalTopAdjustedForPrecedingLineBox const):
(WebCore::InlineIterator::LineBoxIteratorModernPath::contentLogicalBottomAdjustedForFollowingLineBox const):